# jmixin

./: CMakeLists.txt  Makefile  README  jiterator.hpp  jmixin.pc.in  main.cpp
.github/workflows/: cmake.yml
examples/: .test_jmixin_process_info.cpp.swp  CMakeLists.txt  example_certidao_casamento.cpp  example_ffmpeg_info.cpp  example_process_info.cpp  ffmpeg_info.cpp  megasena.cpp
src/: CMakeLists.txt  jiterator.cpp  jstring.cpp
src/include/jmixin/: jiterator.h  jstring.h  jstringliteral.h
src/tests/: CMakeLists.txt  a.cpp  test_all_jmixin.cpp  test_combine_jmixin.cpp  test_count_jmixin.cpp  test_difference_jmixin.cpp  test_eq_jmixin.cpp  test_filter_jmixin.cpp  test_find_jmixin.cpp  test_find_last_jmixin.cpp  test_gt_jmixin.cpp  test_includes_jmixin.cpp  test_jmixin_jiterator_any.cpp  test_jmixin_jiterator_append.cpp  test_jmixin_jiterator_breaks.cpp  test_jmixin_jiterator_build.cpp  test_jmixin_jiterator_chop.cpp  test_jmixin_jiterator_complement.cpp  test_jmixin_jiterator_copy_n.cpp  test_jmixin_jiterator_fill_n.cpp  test_jmixin_jiterator_flatten.cpp  test_jmixin_jiterator_for_each.cpp  test_jmixin_jiterator_for_each_n.cpp  test_jmixin_jiterator_left_rotate.cpp  test_jmixin_jiterator_lrotate.cpp  test_jmixin_jiterator_lt.cpp  test_jmixin_jiterator_nth.cpp  test_jmixin_jiterator_parent.cpp  test_jmixin_jiterator_partition.cpp  test_jmixin_jiterator_prepend.cpp  test_jmixin_jiterator_right_rotate.cpp  test_jmixin_jiterator_rrotate.cpp  test_jmixin_jiterator_shuffle.cpp  test_jmixin_jiterator_stable_partition.cpp  test_jmixin_jiterator_sum.cpp  test_jmixin_jstring_align.cpp  test_jmixin_jstring_append_if_missing.cpp  test_jmixin_jstring_captalize.cpp  test_jmixin_jstring_center.cpp  test_jmixin_jstring_compare.cpp  (+38 more)
tests/: CMakeLists.txt  jiterator_copy.cpp  jiterator_enumerate.cpp  jiterator_first.cpp  jiterator_ge.cpp  jiterator_intersection.cpp  jiterator_last.cpp  jiterator_max.cpp  jiterator_pairs.cpp  jiterator_reverse.cpp  jiterator_sample.cpp  jiterator_shuffle.cpp  jstring_construct.cpp  jstring_contains.cpp  jstring_decode_base64.cpp  jstring_encode_url.cpp  jstring_ends_with_any.cpp  jstring_format.cpp  jstring_from_hex.cpp  jstring_is_alpha.cpp  jstring_is_alpha_numeric.cpp  jstring_is_lower_case.cpp  jstring_iterator.cpp  jstring_iterator_to_string.cpp  jstring_left_trim.cpp  jstring_levenshtein.cpp  jstring_lower_case.cpp  jstring_normalize.cpp  jstring_prepend_if_missing.cpp  jstring_starts_with_any.cpp  jstring_uncaptalize.cpp  megasena.txt  test_jmixin_jiterator_append.cpp  test_jmixin_jiterator_build.cpp  test_jmixin_jiterator_fill.cpp  test_jmixin_jiterator_find_first.cpp  test_jmixin_jiterator_generate.cpp  test_jmixin_jiterator_map.cpp  test_jmixin_jiterator_sort.cpp  test_jmixin_jiterator_swap.cpp  (+18 more)
