cmake_minimum_required (VERSION 3.0)

macro(module_test)
  set(test_file test_${PROJECT_NAME}_${ARGV0})

  add_executable(${test_file} ${test_file}
  )

  add_test(${test_file} ${test_file}
    COMMAND $<TARGET_FILE:${ARGV0}>
  )


  target_link_libraries(${test_file} PUBLIC
    ${PROJECT_NAME}
    pthread
    tbb
  )

  if (SANITIZE)
    target_link_libraries(${test_file} PUBLIC
      -fsanitize=address
      -fsanitize=address
      -fsanitize=leak
      -fsanitize=undefined
      -fsanitize-address-use-after-scope
    )
  endif()
  
  if (COVERAGE)
    target_link_libraries(${test_file} PUBLIC
      --coverage 
      -lgcov
    )
  endif()

  if (PROFILE)
    target_link_libraries(${test_file} PUBLIC
      -pg
    )
  endif()
endmacro()

module_test(jiterator_copy)
module_test(jiterator_copy_n)
module_test(jiterator_eq)
module_test(jiterator_ne)
module_test(jiterator_lt)
module_test(jiterator_le)
module_test(jiterator_gt)
module_test(jiterator_ge)
module_test(jiterator_for_each)
module_test(jiterator_for_each_n)
module_test(jiterator_sort)
module_test(jiterator_filter)
module_test(jiterator_count)
module_test(jiterator_step)
module_test(jiterator_sum)
module_test(jiterator_product)
module_test(jiterator_zip)
module_test(jiterator_map)
module_test(jiterator_build)
module_test(jiterator_fill)
module_test(jiterator_fill_n)
module_test(jiterator_skip)
module_test(jiterator_take)
module_test(jiterator_reverse)
module_test(jiterator_shuffle)
module_test(jiterator_sample)
module_test(jiterator_left_rotate)
module_test(jiterator_right_rotate)
module_test(jiterator_enumerate)
module_test(jiterator_swap)
module_test(jiterator_first)
module_test(jiterator_last)
module_test(jiterator_nth)
module_test(jiterator_find_first)
module_test(jiterator_find_last)
module_test(jiterator_min)
module_test(jiterator_max)
module_test(jiterator_position)
module_test(jiterator_all)
module_test(jiterator_any)
module_test(jiterator_none)
module_test(jiterator_includes)
module_test(jiterator_difference)
module_test(jiterator_complement)
module_test(jiterator_intersection)
module_test(jiterator_union_set)
module_test(jiterator_unique)
module_test(jiterator_append)
module_test(jiterator_prepend)
module_test(jiterator_merge)
module_test(jiterator_combine)
module_test(jiterator_pairs)
module_test(jiterator_breaks)
module_test(jiterator_chop)
module_test(jiterator_flatten)
module_test(jiterator_generate)
module_test(jiterator_partition)

module_test(jstring_iterator)
module_test(jstring_upper_case)
module_test(jstring_lower_case)
module_test(jstring_swap_case)
module_test(jstring_captalize)
module_test(jstring_uncaptalize)
module_test(jstring_left_trim)
module_test(jstring_right_trim)
module_test(jstring_trim)
module_test(jstring_replace)
module_test(jstring_replace_groups)
module_test(jstring_match)
module_test(jstring_search)
module_test(jstring_contains)
module_test(jstring_contains_any)
module_test(jstring_contains_none)
module_test(jstring_starts_with)
module_test(jstring_starts_with_any)
module_test(jstring_ends_with)
module_test(jstring_ends_with_any)
module_test(jstring_append_if_missing)
module_test(jstring_prepend_if_missing)
module_test(jstring_repeat)
module_test(jstring_left_repeat)
module_test(jstring_right_repeat)
module_test(jstring_align)
module_test(jstring_ellipses)
module_test(jstring_split)
module_test(jstring_remove)
module_test(jstring_compare)
module_test(jstring_is_blank)
module_test(jstring_is_lower_case)
module_test(jstring_is_upper_case)
module_test(jstring_is_alpha)
module_test(jstring_is_number)
module_test(jstring_is_alpha_numeric)
module_test(jstring_string_to_iterator)
module_test(jstring_iterator_to_string)
module_test(jstring_match_any)
module_test(jstring_match_none)
module_test(jstring_starts_with_none)
module_test(jstring_ends_with_none)
module_test(jstring_left)
module_test(jstring_right)
module_test(jstring_center)
module_test(jstring_join)
module_test(jstring_normalize)
module_test(jstring_encode_base64)
module_test(jstring_decode_base64)
module_test(jstring_levenshtein)
module_test(jstring_groups)
module_test(jstring_format)
module_test(jstring_asciify)
module_test(jstring_hex)
module_test(jstring_from_hex)
module_test(jstring_encode_url)
module_test(jstring_decode_url)
